<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
    <TableRow
        android:id="@+id/MenuBar"
        android:layout_width="411dp"
        android:layout_height="61dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/MenuList"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/menuList"
            app:srcCompat="@drawable/menu_icon"
            app:tint="@android:color/white" />

        <ImageView
            android:id="@+id/shopLogo"
            android:layout_width="304dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/logiIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/shoppingCrt"
            android:layout_width="47dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/ShoppingCart"
            android:focusable="true"
            android:onClick="shoppingCart"
            app:srcCompat="@drawable/shopping_cart"
            app:tint="@android:color/white"
            tools:ignore="OnClick" />

    </TableRow>


    <ImageView
        android:id="@+id/registerBGImage"
        android:layout_width="wrap_content"
        android:layout_height="504dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="14dp"
        android:contentDescription="@string/BgImage"
        android:src="@drawable/loginbgimage" />

    <TextView
        android:id="@+id/register_shopName"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="cursive"
        android:text="@string/shopName"
        android:textAlignment="center"
        android:textColor="#0E0E0E"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/register_userName_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_shopName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="-22dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input"
        android:hint="Name"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFF"
        android:textSize="17dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="415dp"
        android:layout_marginEnd="-4dp"
        android:layout_marginRight="15dp"
        android:autofillHints=""
        android:background="@drawable/input"
        android:hint="Password"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/common_google_signin_btn_text_dark_pressed"
        android:textSize="17dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_shopName"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="226dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textSize="17dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password_input"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-4dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="#2196F3"
        android:padding="17dp"
        android:text="Create Account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


</RelativeLayout>